# ny-iedr-data-platform

./: .gitignore  .pre-commit-config.yaml  .yamllint  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  README.md  ROUND2_FIXES.md  SCD2_IN_SILVER.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  JOB_ALERT_SETUP.md  SOLUTION_ARCHITECTURE_DIAGRAM.md  volume_baseline_tracking.sql
pipelines/: 01_bronze_ingestion.py  02_silver_transformations.py  03_gold_scd2.py  04_gold_api_views.py  04_gold_views.py
pipelines/utils/: dq_metrics.py  helpers.py  schema_normalization.py  utility_registry.py
tests/: README.md  __init__.py  conftest.py  test_bronze_ingestion.py  test_gold_api_views.py  test_gold_scd2.py  test_helpers.py  test_schema_normalization.py
